Rewriting a lot of it, trying to not use Class.create so much.

--- a/stylesheets/lazergunz.css
+++ b/stylesheets/lazergunz.css
@@ -14,17 +14,18 @@ html, body {
     
   #head {
     background: #000;
-    height: 100px;
+    background: rgba(0, 0, 0, .75);
+    height: 40px;
     position: absolute;
     width: 100%;
     z-index: 2;
   }
     
     #head h1 {
-      font-size: 18px;
+      font-size: 14px;
       font-weight: normal;
       left: 50px;
-      line-height: 100px;
+      line-height: 40px;
       margin: 0;
       padding: 0;
       position: absolute;
@@ -35,11 +36,13 @@ html, body {
       }
       
     #head ul#links {
-      line-height: 100px;
+      font-size: 14px;
+      line-height: 40px;
       margin: 0;
       padding: 0;
       position: absolute;
       right: 50px;
+      width: 500px;
     }
 
       #head ul#links li {
@@ -49,26 +52,8 @@ html, body {
       }
 
         #head ul#links li a {
-          padding: 5px;
-          text-decoration: none;
-        }
-    
-    #head ul#toplinks {
-      font-size: 12px;
-      margin: 0;
-      padding: 0;
-      position: absolute;
-      right: 50px;
-      top: 5px;
-    }
-      
-      #head ul#toplinks li {
-        display: inline;
-        list-style: none;
-      }
-      
-        #head ul#toplinks li a {
-          padding: 5px;
+          float: right;
+          padding: 0 15px;
           text-decoration: none;
         }
 
