--- a/stylesheets/lazergunz.css
+++ b/stylesheets/lazergunz.css
@@ -14,7 +14,6 @@ html, body {
     
   #head {
     background: #000;
-    background: rgba(0, 0, 0, .75);
     height: 40px;
     position: absolute;
     width: 100%;
@@ -107,29 +106,47 @@ html, body {
         color: #fff;
       }
       
-      .color a[href='#Remove'] {
-        background: black;
-        bottom: 10px;
-        color: #fff;
+      .color ul {
         display: none;
         font-size: 12px;
-        left: 50%;
-        margin: 0 0 0 -45px;
-        padding: 2px;
+        height: 20px;
+        margin: 0;
+        padding: 0;
         position: absolute;
-        text-decoration: none;
-        text-align: center;
-        width: 90px;
-        z-index: 4;
+        right: 10px;
+        top: 50px;
+        width: 50px;
       }
+        
+        .color ul li {
+          list-style: none;
+          margin: 0;
+          padding: 0;
+        }
+        
+        .color ul li a {
+          background: rgba(0, 0, 0, .6);
+          float: left;
+          font-weight: bold;
+          height: 20px;
+          line-height: 20px;
+          margin-left: 5px;
+          -moz-border-radius: 3px;
+          width: 20px;
+          text-decoration: none;
+        }
+        
+          .color a[href='#Remove'] {
+          
+          }
       
-      .color:hover a[href='#Remove'] {
+      .color:hover ul {
         display: block;
       }
       
-      .color a[href='#Remove']:hover {
-        background: #fff;
-        color: #000;
+      .color a:hover {
+        background: #000;
+        color: #fff;
       }
       
     
