--- a/stylesheets/lazergunz.css
+++ b/stylesheets/lazergunz.css
@@ -43,13 +43,13 @@ html, body {
       right: 50px;
       width: 500px;
     }
-
+    
       #head ul#links li {
         list-style: none;
         margin: 0;
         padding: 0;
       }
-
+      
         #head ul#links li a {
           float: right;
           padding: 0 15px;
@@ -132,6 +132,7 @@ html, body {
           line-height: 20px;
           margin-left: 5px;
           -moz-border-radius: 3px;
+          -webkit-border-radius: 3px;
           width: 20px;
           text-decoration: none;
         }
@@ -151,7 +152,7 @@ html, body {
       
     
   #content {
-    background: #000;
+    background: rgba(0, 0, 0, .7);
     color: #999;
     left: 22%;
     margin: auto;
@@ -159,6 +160,8 @@ html, body {
     top: 200px;
     width: 58%;
     z-index: 3;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
   }
     
     .margin {
