--- a/stylesheets/lazergunz.css
+++ b/stylesheets/lazergunz.css
@@ -2,6 +2,12 @@
 
 Layout
 */
+
+a {
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+}
+
 html, body {
   background: #000;
   color: #ccc;
@@ -139,13 +145,17 @@ html, body {
     
   #content {
     background: rgba(0, 0, 0, .7);
-    color: #999;
-    left: 22%;
-    margin: auto;
+    color: #777;
+    font-size: 13px;
+    left: 50%;
+    line-height: 20px;
+    margin: 0 0 0 -250px;
+    padding: 0 0 20px 0;
     position: absolute;
+    text-shadow: 0 0 3px #000;
     top: 200px;
-    width: 58%;
-    z-index: 3;
+    width: 500px;
+    z-index: 5;
     -moz-border-radius: 10px;
     -webkit-border-radius: 10px;
   }
@@ -169,9 +179,14 @@ Type
   a, #content a {
     color: #fff;
   }
+  
+    #content a {
+      padding: 3px;
+    }
 
     a:hover, #content a:hover {
       background: #fff;
+      text-shadow: 0 0 2px #fff;
       color: #000;
     }
   
