--- a/stylesheets/lazergunz.css
+++ b/stylesheets/lazergunz.css
@@ -3,24 +3,25 @@
 Layout
 */
 
-a {
+#content a {
   -moz-border-radius: 3px;
   -webkit-border-radius: 3px;
 }
 
 html, body {
   background: #000;
-  color: #ccc;
+  color: #e5e5e5;
   font-family: Helvetica, Arial, sans-serif;
   line-height: 1.25em;
   margin: 0;
   overflow: hidden;
   padding: 0;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, .9);
 }
     
   #head {
-    background: #000;
-    height: 40px;
+    background: rgba(0, 0, 0, .8);
+    height: 30px;
     position: absolute;
     width: 100%;
     z-index: 2;
@@ -29,8 +30,8 @@ html, body {
     #head h1 {
       font-size: 14px;
       font-weight: normal;
-      left: 50px;
-      line-height: 40px;
+      left: 30px;
+      line-height: 30px;
       margin: 0;
       padding: 0;
       position: absolute;
@@ -42,11 +43,11 @@ html, body {
       
     #head ul#links {
       font-size: 14px;
-      line-height: 40px;
+      line-height: 30px;
       margin: 0;
       padding: 0;
       position: absolute;
-      right: 50px;
+      right: 30px;
       width: 500px;
     }
     
@@ -60,6 +61,11 @@ html, body {
           float: right;
           padding: 0 15px;
           text-decoration: none;
+        }
+        
+        #head ul#links li a:hover {
+          background: rgba(0, 0, 0, .5);
+          color: #fff;
         }
 
   #stage {
@@ -183,7 +189,7 @@ Type
       padding: 3px;
     }
 
-    a:hover, #content a:hover {
+    #content a:hover {
       background: #fff;
       text-shadow: 0 0 2px #fff;
       color: #000;
@@ -207,13 +213,14 @@ Type
 Color Picker
 */
 #colorpicker {
-  background: rgba(0, 0, 0, .9);
+  background: rgba(0, 0, 0, .8);
   border: 1px solid #000;
+  border-top: 0;
   font-size: 10px;
   padding: 5px;
   position: absolute;
   right: 0;
-  top: 40px;
+  top: 30px;
   width: 430px;
   z-index: 1;
   -moz-border-radius: 0 0 5px 5px;
