--- a/stylesheets/lazergunz.css
+++ b/stylesheets/lazergunz.css
@@ -64,7 +64,7 @@ html, body {
         }
         
         #head ul#links li a:hover {
-          background: rgba(0, 0, 0, .5);
+          background: rgba(0k, 0, 0, .5);
           color: #fff;
         }
 
